# nn-perceptron

./: .gitignore  README.md  benchmark.cmd  logs.txt  pom.xml
cpp/: CMakeLists.txt  Matrix.cpp  Matrix.h  NeuralNetwork.cpp  StreamBuffer.cpp  StreamBuffer.h  TrainingSamples.cpp  TrainingSamples.h
cpp/jni/: org_yah_tests_perceptron_jni_NativeNeuralNetwork.h  org_yah_tests_perceptron_jni_NativeTrainingSamples.h
dumps/: matrix_n2_2_b0.dump  matrix_n2_3_2_b0.dump  test.dump
native/neuralnetwork/: .gitignore  CMakeLists.txt  CMakeSettings.json  Matrix.cpp  Matrix.h  NeuralNetwork.cpp  StreamBuffer.h  TrainingSamples.cpp  TrainingSamples.h  cpp.hint
natives/: .gitignore
src/benchmarks/perceptronorg/yah/tests/perceptron/: MatrixBenchmark.java  NetworkBenchmark.java  TrainingBenchmark.java
src/main/java/org/yah/tests/perceptron/: Activation.java  ArrayMatrix.java  Batch.java  BatchSource.java  InputSamples.java  JavaNeuralNetwork.java  Labels.java  Matrix.java  MatrixBatchSource.java  MatrixNeuralNetwork.java  NetworkOutputs.java  NeuralNetwork.java  NeuralNetworkState.java  RandomUtils.java  SamplesProviders.java  SamplesSource.java  TrainingSamples.java  TransposedMatrix.java
src/main/resources/cl/: neuralnetwork.cl
src/main/resources/glsl/: flowers.fs.glsl  flowers.vs.glsl
src/test/java/org/yah/tests/perceptron/: AbstractGLDemo.java  AbstractMatrixTest.java  AbstractNetworkStateTest.java  AbstractNeuralNetworkTest.java  ArrayMatrixTest.java  GLDemo.java  GLDemoLauncher.java  MatrixBatchSourceTest.java  MatrixUtilsTest.java  NetworkDump.java  (+3 more)
(+72 files in other folders)
